plugins {
    id 'java'
    id 'maven'
    id 'maven-publish'
    id 'checkstyle'
}

repositories {
    mavenCentral()
    mavenLocal()
}

apply from: '../opencadc.gradle'

sourceCompatibility = 1.8

group = 'org.opencadc'

version = '1.7.10'

description = 'OpenCADC CAOM2 TAP client library'
def git_url = 'https://github.com/opencadc/caom2service'

dependencies {
    compile 'log4j:log4j:[1.2.0,)'

    compile 'org.opencadc:cadc-util:[1.1.1,)'
    compile 'org.opencadc:cadc-log:[1.0,)'
    compile 'org.opencadc:cadc-cdp:[1.0.1,2.0)'
    compile 'org.opencadc:cadc-registry:[1.5.0,)'
    compile 'org.opencadc:cadc-tap:[1.0,)'
    compile 'org.opencadc:cadc-dali:[1.1,)'
    compile 'org.opencadc:caom2:[2.4.3,2.5)'
    compile 'org.opencadc:caom2-artifact-resolvers:[1.2.5,)'
 
    testCompile 'junit:junit:[4.0,5.0)'
}
